minio/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: minio
  labels:
    app.kubernetes.io/name: minio
    app.kubernetes.io/env: development
